2004-09-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* novice.el (disabled-command-hook): Use shorthand for obsolescence.
	(disabled-command-function): Make the ?\  char more obvious.

	* vc-arch.el (vc-arch-root, vc-arch-registered):
	* vc-mcvs.el (vc-mcvs-root, vc-mcvs-registered): Use vc-find-root.

2004-09-13  Hovav Shacham  <hovav@sha1.stanford.edu>

	* windmove.el (windmove-frame-edges): Report coordinates of
	outside edges of frame, not inside edges.
	(windmove-coordinates-of-position): Convert into wrapper to new
	function `windmove-coordinates-of-window-position';
	`compute-motion' always applies to selected window.
	(windmove-coordinates-of-position): Update documentation to refer
	to Emacs 21 Lisp Reference Manual.
	(windmove-find-other-window): Fix off-by-one errors for max x,y.

2004-09-13  Kim F. Storm  <storm@cua.dk>

	* isearch.el (isearch-resume-in-command-history): Rename from
	isearch-resume-enabled and change default to nil.

2004-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-hooks.el (vc-ignore-dir-regexp): New var.
	(vc-registered): Use it.
	(vc-find-root): New fun.

	* emacs-lisp/checkdoc.el (checkdoc-this-string-valid-engine):
	Don't tell to use \\{...} when it's already done.

	* textmodes/bibtex.el (bibtex-generate-url-list): Change format.
	Provide a sample complex default.
	(bibtex-url, bibtex-font-lock-url): Adapt to new format.
	(bibtex-entry): Use mapc.

2004-09-12  Kim F. Storm  <storm@cua.dk>

	* kmacro.el (kmacro-step-edit-prompt): Add "%s" format to message.

	* emulation/cua-rect.el (cua--rectangle-operation): Let bind
	inhibit-field-text-motion to t so rectangles work in comint buffers.

	* simple.el (choose-completion-string): Set buffer before running
	choose-completion-string-functions hook so it can be buffer-local.

2004-09-12  Daniel Pfeiffer  <occitan@esperanto.org>

	* progmodes/compile.el (compilation-start): Parse command to see
	if it starts with a cd, and if so perform it for the *compilation*