@@ -1,3 +1,9 @@
+2004-09-14  Simon Josefsson  <jas@extundo.com>
+
+	* files.el (auto-mode-alist): Map .soa and .zone to dns-mode.
+
+	* textmodes/dns-mode.el: Add.
+
 2004-09-13  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* novice.el (disabled-command-hook): Use shorthand for obsolescence.
